2008-06-05  John Paul Wallington  <jpw@pobox.com>

	* bindings.el (completion-ignored-extensions):
	Add .p64fsl, .d64fsl, and .dx64fsl.

2008-06-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* ffap.el (ffap-prompter): Don't use the region.

2008-06-05  Sam Steingold  <sds@gnu.org>

	* vc-cvs.el (vc-cvs-registered): Consider a directory with a CVS
	subdirectory to be registered.

2008-06-05  Martin Rudalics  <rudalics@gmx.at>

	* window.el (display-buffer-function, special-display-p)
	(special-display-buffer-names, special-display-regexps)
	(special-display-function, same-window-p, same-window-buffer-names)
	(same-window-regexps, pop-up-frames, display-buffer-reuse-frames)
	(pop-up-frame-function, pop-up-windows)
	(split-window-preferred-function, split-height-threshold)
	(split-width-threshold, window--splittable-p)
	(window--try-to-split-window, window--frame-usable-p)
	(even-window-heights, window--even-window-heights)
	(window--display-buffer-1, window--display-buffer-2, display-buffer)
	(pop-to-buffer): Move from window.c and buffer.c.
	(split-window-preferred-horizontally): Remove.
	* cus-start.el: Remove corresponding declarations.

2008-06-05  Sam Steingold  <sds@gnu.org>

	* vc.el (vc-update): Use `save-some-buffers' instead of signaling
	an error on modified buffers.

2008-06-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/etags.el (tags-verify-table): Be careful to use and update
	tags-file-name and tags-table-list from the right buffer.
	(tags-table-check-computed-list, tags-table-extend-computed-list)
	(find-tag-noselect): Use with-current-buffer.

	* emacs-lisp/trace.el (trace-entry-message, trace-exit-message):
	Use print-circle.

	* minibuffer.el (minibuffer-local-must-match-filename-map):
	Declare obsolete alias for the old name.

	* abbrev.el (unexpand-abbrev): Better preserve markers.

2008-06-05  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/autoload.el (autoload-rubric): New function,
	extracted from autoload-ensure-default-file.